--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "diligent-vessel-foundation",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:optimized": "node scripts/build-optimized.js",
+    "optimize:images": "node scripts/optimize-images.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -13,28 +15,39 @@
     "@headlessui/react": "^1.7.17",
     "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^7.4.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-scroll": "^1.8.10",
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-scroll": "^1.8.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "compression-webpack-plugin": "^10.0.0",
+    "cssnano": "^6.0.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-webp": "^8.0.0",
+    "postcss": "^8.4.23",
+    "sharp": "^0.32.1",
+    "tailwindcss": "^3.3.1",
+    "terser": "^5.17.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0",
+    "vite-node": "^0.31.1",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
