--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && node scripts/copy-images.js",
     "build:optimized": "node scripts/build-optimized.js",
     "optimize:images": "node scripts/optimize-images.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -15,38 +15,38 @@
     "@headlessui/react": "^1.7.17",
     "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
-    "framer-motion": "^10.12.4",
+    "framer-motion": "^10.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^7.4.1",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/node": "^18.19.85",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.6",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "compression-webpack-plugin": "^10.0.0",
     "cssnano": "^6.0.1",
-    "eslint": "^8.55.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "imagemin": "^8.0.1",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-webp": "^8.0.0",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.27",
     "sharp": "^0.32.1",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.3",
     "terser": "^5.17.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
     "vite-node": "^0.31.1",
     "vite-plugin-imagemin": "^0.6.1"
   }
