--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node scripts/copy-images.js",
+    "build": "vite build",
+    "vercel-build": "vite build",
     "build:optimized": "node scripts/build-optimized.js",
     "optimize:images": "node scripts/optimize-images.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
